Fixed issue where hiding selected image while loading was visible

--- a/src/page/components/selected-image.module.css
+++ b/src/page/components/selected-image.module.css
@@ -44,6 +44,7 @@
 	cursor: pointer;
 }
 #selected-image-parent.loading {
+	transform: none;
 	scale: 0.001;
 }
 #selected-image-parent button {
